--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <head>
 <meta charset= "UTF-8>
 <title>My Webpage</title>
+</head>
 </body>
 <h1>Hello World</h1>
 <p>Hello everyone</P>
+                </body>
 </html>
